k8s/ingress/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: static-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-web
  template:
    metadata:
      labels:
        app: static-web
        version: "1"        
    spec:
      containers:
      - name: nginx
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        image: nginx:1.14.2
        ports:
        - containerPort: 80
