k8s/ingress/ingress-dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'                   # Optional สำหรับทำ HTTPS

spec:
  rules:
    - host: dev.localhost
      http:
          paths:
            - backend:
                serviceName: my-service
                servicePort: 8080
